src/litellm/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm-deployment
  labels:
    app: litellm
spec:
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
      - name: litellm
        image: ghcr.io/berriai/litellm:v1.77.3-stable
        # args:
          # - "--config"
          # - "/app/proxy_server_config.yaml"
        ports:
        - containerPort: 4000
        # volumeMounts:
        # - name: config-volume
        #   mountPath: /app/proxy_server_config.yaml
        #   subPath: config.yaml
