src/litellm/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm-service
  namespace: litellm
  labels:
    app: litellm
spec:
  ports:
    - name: https
      port: 443
      targetPort: 4000
  selector:
    app: litellm
